--- a/bot/connector-rest/pom.xml
+++ b/bot/connector-rest/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.3.1</version>
+        <version>19.3.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-connector-rest</artifactId>
