--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,16 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.4.10</kotlin>
-        <couroutine>1.4.0</couroutine>
+        <kotlin>1.4.21</kotlin>
+        <couroutine>1.4.2</couroutine>
 
         <slf4j>1.7.30</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>2.0.3</kotlin-logging>
+        <kotlin-logging>2.0.4</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>4.1.3</kmongo>
+        <kmongo>4.2.3</kmongo>
         <jackson>2.11.3</jackson>
         <jackson-databind>2.11.3</jackson-databind>
         <jackson-module>2.11.3</jackson-module>
@@ -48,32 +48,32 @@
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
         <klaxon>5.4</klaxon>
-        <vertx>3.9.4</vertx>
+        <vertx>3.9.5</vertx>
         <retrofit>2.9.0</retrofit>
         <okhttp>4.9.0</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.6.1</circuitbreaker>
-        <guava>30.0-jre</guava>
-        <google-auth>1.31.1</google-auth>
-        <google-http-client>1.37.0</google-http-client>
+        <guava>30.1-jre</guava>
+        <google-auth>1.31.2</google-auth>
+        <google-http-client>1.38.0</google-http-client>
         <jasypt>1.9.3</jasypt>
         <commons-csv>1.8</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.15</commons-codec>
         <commons-lang>3.11</commons-lang>
-        <json>20200518</json>
+        <json>20201115</json>
         <httpclient>4.5.13</httpclient>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
-        <google>13.3.0</google>
-        <aws-sdk>1.11.888</aws-sdk>
+        <google>16.1.0</google>
+        <aws-sdk>1.11.919</aws-sdk>
 
         <junit-jupiter>5.7.0</junit-jupiter>
 
-        <mockk>1.10.2</mockk>
+        <mockk>1.10.3-jdk8</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.10.17</byte-buddy>
+        <byte-buddy>1.10.18</byte-buddy>
         <atrium>0.8.0</atrium>
 
         <plugin.surefire>3.0.0-M5</plugin.surefire>
@@ -83,7 +83,7 @@
         <plugin.nexus-staging>1.6.8</plugin.nexus-staging>
         <plugin.dokka>1.4.10.2</plugin.dokka>
         <plugin.assembly>3.3.0</plugin.assembly>
-        <plugin.frontend>1.10.3</plugin.frontend>
+        <plugin.frontend>1.10.4</plugin.frontend>
         <plugin.clean>3.1.0</plugin.clean>
         <plugin.jar>3.2.0</plugin.jar>
         <plugin.ant>3.0.0</plugin.ant>
