--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -34,7 +34,7 @@
               "node_modules/nebular-icons/scss/nebular-icons.scss",
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
               "node_modules/leaflet/dist/leaflet.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/jsoneditor.css"
             ],
             "scripts": [
