--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "^10.0.9",
     "@nebular/eva-icons": "6.0.0",
     "@nebular/theme": "6.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-bootstrap/ng-bootstrap": "8.0.0",
     "ang-jsoneditor": "^1.8.4",
     "angular-file-saver": "^1.1.3",
     "bootstrap": "^4.4.1",
@@ -38,7 +38,7 @@
     "cytoscape-cola": "^2.3.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.2.2",
-    "echarts": "^4.7.0",
+    "echarts": "^5.0.0",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -51,7 +51,7 @@
     "ng2-ckeditor": "^1.2.7",
     "ng2-completer": "^3.0.3",
     "ng2-file-upload": "^1.4.0",
-    "ngx-echarts": "^4.2.2",
+    "ngx-echarts": "^5.2.2",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^3.5.0",
     "node-sass": "^4.14.1",
@@ -84,6 +84,7 @@
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "stylelint": "^13.3.3",
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
