--- a/nlp/integration-tests/pom.xml
+++ b/nlp/integration-tests/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>20.9.3-SNAPSHOT</version>
+        <version>20.9.3</version>
     </parent>
 
     <artifactId>tock-nlp-integration-tests</artifactId>
