--- a/nlp/api/doc/pom.xml
+++ b/nlp/api/doc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>21.3.0-SNAPSHOT</version>
+        <version>21.3.0</version>
     </parent>
 
     <artifactId>tock-nlp-api-doc</artifactId>
