--- a/nlp/build-model-worker/pom.xml
+++ b/nlp/build-model-worker/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>21.3.0-SNAPSHOT</version>
+        <version>21.3.0</version>
     </parent>
 
     <artifactId>tock-nlp-build-model-worker</artifactId>
