--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>21.3.0-SNAPSHOT</version>
+        <version>21.3.0</version>
     </parent>
 
     <artifactId>tock-shared</artifactId>
