resolves #1247 [Web] Add optional style to buttons
- Also add tests to WebBuilders, to prevent breaking backward compatibility with new properties
- Refactor WebBuilders.webUrlButton for better backward compatibility (fixes method resolution ambiguity introduced by #1226)

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/connector-web/pom.xml
+++ b/bot/connector-web/pom.xml
@@ -72,6 +72,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
