resolves #1246 Web: connector bridge
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/connector-web-model/pom.xml
+++ b/bot/connector-web-model/pom.xml
@@ -24,6 +24,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tock-bot-connector-web-model</artifactId>
+    <name>Tock Bot Web Connector Model</name>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
