--- a/nlp/model/opennlp/pom.xml
+++ b/nlp/model/opennlp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>21.3.1-SNAPSHOT</version>
+        <version>21.3.1</version>
     </parent>
 
     <artifactId>tock-nlp-model-opennlp</artifactId>
