--- a/bot/api/model/pom.xml
+++ b/bot/api/model/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-api</artifactId>
-        <version>21.3.1</version>
+        <version>21.3.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-api-model</artifactId>
