--- a/bot/test-base/pom.xml
+++ b/bot/test-base/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.3.1</version>
+        <version>21.3.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>bot-test-base</artifactId>
