--- a/bot/connector-web-model/pom.xml
+++ b/bot/connector-web-model/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>ai.tock</groupId>
-        <version>21.3.2-SNAPSHOT</version>
+        <version>21.3.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
