--- a/bot/xray/pom.xml
+++ b/bot/xray/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.3.2-SNAPSHOT</version>
+        <version>21.3.2</version>
     </parent>
 
     <artifactId>tock-xray-plugin</artifactId>
