--- a/nlp/api/client/pom.xml
+++ b/nlp/api/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>21.3.2</version>
+        <version>21.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>nlp-api-client</artifactId>
