--- a/nlp/front/pom.xml
+++ b/nlp/front/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>21.3.4-SNAPSHOT</version>
+        <version>21.3.4</version>
     </parent>
 
     <artifactId>tock-nlp-front</artifactId>
