--- a/bot/admin/server/pom.xml
+++ b/bot/admin/server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin</artifactId>
-        <version>21.3.5-SNAPSHOT</version>
+        <version>21.3.5</version>
     </parent>
 
     <artifactId>tock-bot-admin-server</artifactId>
