--- a/bot/dialogflow/pom.xml
+++ b/bot/dialogflow/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.3.5-SNAPSHOT</version>
+        <version>21.3.5</version>
     </parent>
 
     <artifactId>tock-nlp-dialogflow</artifactId>
