--- a/nlp/api/pom.xml
+++ b/nlp/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>21.3.5-SNAPSHOT</version>
+        <version>21.3.5</version>
     </parent>
 
     <artifactId>tock-nlp-api</artifactId>
