--- a/nlp/core/service/pom.xml
+++ b/nlp/core/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>21.3.5-SNAPSHOT</version>
+        <version>21.3.5</version>
     </parent>
 
     <artifactId>tock-nlp-core-service</artifactId>
