--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-admin</artifactId>
-        <version>21.3.5</version>
+        <version>21.3.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-admin-server</artifactId>
