--- a/nlp/front/client/pom.xml
+++ b/nlp/front/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-front</artifactId>
-        <version>21.3.5</version>
+        <version>21.3.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-front-client</artifactId>
