--- a/pom.xml
+++ b/pom.xml
@@ -31,34 +31,34 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.5.21</kotlin>
-        <couroutine>1.5.1</couroutine>
+        <kotlin>1.5.31</kotlin>
+        <couroutine>1.5.2</couroutine>
 
         <slf4j>1.7.30</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>2.0.10</kotlin-logging>
+        <kotlin-logging>2.0.11</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>4.2.8</kmongo>
-        <jackson>2.12.4</jackson>
-        <jackson-databind>2.12.4</jackson-databind>
-        <jackson-module>2.12.4</jackson-module>
+        <kmongo>4.3.0</kmongo>
+        <jackson>2.12.5</jackson>
+        <jackson-databind>2.12.5</jackson-databind>
+        <jackson-module>2.12.5</jackson-module>
         <jackson-module-loader>0.4.0</jackson-module-loader>
         <jackson-data>0.4.0</jackson-data>
         <jackson-generator>0.4.0</jackson-generator>
         <klaxon>5.5</klaxon>
-        <vertx>3.9.8</vertx>
+        <vertx>3.9.9</vertx>
         <retrofit>2.9.0</retrofit>
         <okhttp>4.9.1</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.7.1</circuitbreaker>
         <guava>30.1.1-jre</guava>
-        <google-auth>1.31.5</google-auth>
-        <google-http-client>1.39.2-sp.1</google-http-client>
+        <google-auth>1.32.1</google-auth>
+        <google-http-client>1.40.0</google-http-client>
         <jasypt>1.9.3</jasypt>
-        <commons-csv>1.8</commons-csv>
+        <commons-csv>1.9.0</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.15</commons-codec>
         <commons-lang>3.12.0</commons-lang>
@@ -66,14 +66,14 @@
         <httpclient>4.5.13</httpclient>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
-        <google>20.8.0</google>
-        <aws-sdk>1.12.31</aws-sdk>
+        <google>23.0.0</google>
+        <aws-sdk>1.12.70</aws-sdk>
 
-        <junit-jupiter>5.8.0-M1</junit-jupiter>
+        <junit-jupiter>5.8.0</junit-jupiter>
 
         <mockk>1.12.0</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.11.8</byte-buddy>
+        <byte-buddy>1.11.16</byte-buddy>
         <atrium>0.15.0</atrium>
 
         <plugin.surefire>3.0.0-M5</plugin.surefire>
@@ -91,8 +91,8 @@
         <plugin.dependency>3.2.0</plugin.dependency>
         <plugin.resources>3.2.0</plugin.resources>
         <plugin.deploy>3.0.0-M1</plugin.deploy>
-        <plugin.gitid>4.9.9</plugin.gitid>
-        <plugin.ktlint>1.9.0</plugin.ktlint>
+        <plugin.gitid>4.9.10</plugin.gitid>
+        <plugin.ktlint>1.10.2</plugin.ktlint>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
