--- a/bot/connector-rest/pom.xml
+++ b/bot/connector-rest/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.3.6-SNAPSHOT</version>
+        <version>21.9.0</version>
     </parent>
 
     <artifactId>tock-bot-connector-rest</artifactId>
